--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <main>
     <h1>hi, im zix</h1>
     <p>
-      im a really dumb coder  
+      im a really dumb developer and i can't code right  
     </p>
     <p>
       i normally code gtag mods/batch files so yeah.  
