--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <h2>projects</h2>
     <p>most of my projects are on <a href="https://github.com/zixthenerd">github</a></p>
+    <p>currently im working on a discord bot <a href="https://discord.gg/hPQ7Um2FY3">Verify Buddy</a> a verification bot!</p>
   </main>
 
   <footer>
