--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>most of my projects are on <a href="https://github.com/zixthenerd">github</a></p>
     <p>currently im working on a discord bot <a href="https://discord.gg/hPQ7Um2FY3">Verify Buddy</a> a verification bot!</p>
   </main>
-
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'Q5Q71LK6L2');kofiwidget2.draw();</script> 
   <footer>
     © 2025 zix
   </footer>
